@@ -588,7 +588,7 @@ xfdesktop_file_icon_manager_trash_files_cb(DBusGProxy *proxy,
     if(error) {
         GtkWidget *parent = gtk_widget_get_toplevel(GTK_WIDGET(fmanager->priv->icon_view));
 
-        xfce_message_dialog(GTK_WINDOW (parent),
+        xfce_message_dialog(GTK_WINDOW(parent),
                             _("Trash Error"), GTK_STOCK_DIALOG_ERROR,
                             _("The selected files could not be trashed"),
                             _("This feature requires a file manager service to "
@@ -632,7 +632,7 @@ xfdesktop_file_icon_manager_trash_files(XfdesktopFileIconManager *fmanager,
     {
         GtkWidget *parent = gtk_widget_get_toplevel(GTK_WIDGET(fmanager->priv->icon_view));
 
-        xfce_message_dialog(GTK_WINDOW (parent),
+        xfce_message_dialog(GTK_WINDOW(parent),
                             _("Trash Error"), GTK_STOCK_DIALOG_ERROR,
                             _("The selected files could not be trashed"),
                             _("This feature requires a file manager service to "
@@ -2223,7 +2223,11 @@ xfdesktop_file_icon_manager_files_ready(GFileEnumerator *enumerator,
     if(!files) {
         if(error) {
             GtkWidget *toplevel = gtk_widget_get_toplevel(GTK_WIDGET(fmanager->priv->icon_view));
+#if GTK_CHECK_VERSION (2, 18, 0)
             xfce_message_dialog(gtk_widget_is_toplevel(toplevel) ? GTK_WINDOW(toplevel) : NULL,
+#else
+            xfce_message_dialog(GTK_WIDGET_TOPLEVEL(toplevel) ? GTK_WINDOW(toplevel) : NULL,
+#endif
                                 _("Load Error"),
                                 GTK_STOCK_DIALOG_WARNING, 
                                 _("Failed to load the desktop folder"), error->message,
